# workflow

./: .gitignore  LICENSE  README.md  openclaw.json  pyproject.toml  setup_gmail_label_filter.py
.github/workflows/: ci.yml
src/fgai_workflows/: __init__.py
src/fgai_workflows/digest/: __init__.py
src/fgai_workflows/vc_brief/: __init__.py  skill.py  utils.py
tests/: test_digest.py
