[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fgai-workflows"
version = "0.1.0"
description = "FounderGraph AI: modular OpenClaw workflows (digest, marketing, research)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "FounderGraph AI", email = "dev@foundergraphai.com"}]
keywords = ["openclaw", "ai", "automation", "workflows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openclaw>=0.3.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "flake8>=5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]